<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Trinket Trader</string>
    <string name="test_email">test@test.test</string>

    <string name="title_activity_add_or_edit_trinket">Add Or Edit Trinket</string>
    <string name="title_activity_create_trade">CreateTradeActivity</string>
    <string name="title_activity_edit_friends_list">Edit Friends List</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_friends">Display Friends</string>
    <string name="title_activity_friends_inventory">Friends Inventory</string>
    <string name="title_activity_friends_profile">Friends Profile</string>
    <string name="title_activity_friends_trinket_details">Friends Trinket</string>
    <string name="title_activity_home_page">Home</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_inventory_details">Inventory Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_past_trades">Past Trades</string>
    <string name="title_activity_tracked_friends">Tracked Friends</string>
    <string name="title_activity_trades">Trades</string>
    <string name="title_activity_trinket_details">Trinket Details</string>
    <string name="title_activity_user_profile">User Profile</string>

    <!-- activity_display_inventory -->
    <string name="activity_display_inventory_category_prompt">Filter by Category</string>

    <!-- activity_add_or_edit_trinket -->
    <string name="activity_add_or_edit_trinket_accessibility_checkbox">Public</string>
    <string name="activity_add_or_edit_trinket_description_hint">Description</string>
    <string name="activity_add_or_edit_trinket_latitude">Latitude</string>
    <string name="activity_add_or_edit_trinket_longitude">Longitude</string>
    <string name="activity_add_or_edit_trinket_name_hint">Name</string>
    <string name="activity_add_or_edit_trinket_picture_library_button_text">Picture Library</string>
    <string name="activity_add_or_edit_trinket_quantity_hint">Quantity</string>
    <string name="activity_add_or_edit_trinket_remove_picture_button_text">Remove Picture</string>
    <string name="activity_add_or_edit_trinket_save_button_text">Save</string>
    <string name="activity_add_or_edit_trinket_spinner_categories_prompt">Set Accessibility</string>
    <string name="activity_add_or_edit_trinket_spinner_qualities_prompt">Set Accessibility</string>
    <string name="activity_add_or_edit_trinket_take_picture_button_text">Take Picture</string>

    <!-- activity_home_page -->
    <string name="activity_home_page_friends_button">Friends</string>
    <string name="activity_home_page_inventory_button">Inventory</string>
    <string name="activity_home_page_profile_button">My Profile</string>
    <string name="activity_home_page_trades_button">Trades</string>

    <!-- activity_login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_display_friends_profile">FriendsProfileActivity</string>
    <string name="title_activity_display_tracked_friends">TrackedFriendsActivity</string>
    <string name="title_activity_trade_details">TradeDetailsActivity</string>

    <!-- activity_create_trade -->
    <string name="activity_create_trade_friend_prompt">Select a Friend</string>
    <string name="title_activity_inventory_trade">InventoryTradeActivity</string>
    <string name="title_activity_trade_received">TradeReceivedActivity</string>
    <string name="title_activity_counter_trade">CounterTradeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_all_friends_inventories">AllFriendsInventories</string>
</resources>
