<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.trinkettrader.Inventory.Trinket.AddOrEditTrinketActivity">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/name_text"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:hint="@string/activity_add_or_edit_trinket_name_hint"/>

        <EditText
            android:id="@+id/quantity_text"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:hint="@string/activity_add_or_edit_trinket_quantity_hint"/>

        <CheckBox
            android:id="@+id/accessibility_checkbox"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/activity_add_or_edit_trinket_accessibility_checkbox"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activity_add_or_edit_trinket_description_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/latitude"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/activity_add_or_edit_trinket_latitude"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/longitude"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/activity_add_or_edit_trinket_longitude"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:entries="@array/spinner_categories"
            android:prompt="@string/activity_add_or_edit_trinket_spinner_categories_prompt"
            android:spinnerMode="dropdown"/>

        <Spinner
            android:id="@+id/quality_spinner"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:entries="@array/spinner_qualities"
            android:prompt="@string/activity_add_or_edit_trinket_spinner_qualities_prompt"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:gravity="center">

        <Button
            android:id="@+id/picture_library_button"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:onClick="pictureLibraryClick"
            android:text="@string/activity_add_or_edit_trinket_picture_library_button_text"/>

        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:onClick="takePictureClick"
            android:text="@string/activity_add_or_edit_trinket_take_picture_button_text"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/activity_add_or_edit_trinket_save_button_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="250dp"
        android:gravity="center">

        <!-- Bill Donahue; https://github.com/MeetMe/Android-HorizontalListView; 2015-11-20 -->
        <com.meetme.android.horizontallistview.HorizontalListView
            android:id="@+id/gallery"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:widget="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            widget:dividerWidth="10dp"/>
    </LinearLayout>
</LinearLayout>
